# preview-image-folder

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  head.html  make.sh  package-lock.json  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actions.yml  dockerimage.yml  release.yml
examples/: cli.rs  list-files.rs
public/: index.html
src/: app.rs  files.rs  lib.rs  main.rs  page.rs  server.rs  watcher.rs
