[package]
name = "preview-image-folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
env_logger = "0.9.0"
notify = "4.0.17"
# notify = "5.0.0"
term = "0.7.0"
urlencoding = "2.1.0"
ws = "*"
